<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.restaurant.VendorDetailActivity">

    <com.themarkettheory.user.helper.NonSwipeableViewPager
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutToolbar" />

    <include
        android:id="@+id/layoutToolbar"
        layout="@layout/toolbar_restaurant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@color/charade"
        app:tabIndicatorColor="@color/robins_egg_blue"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="top"
        app:tabTextColor="@color/slate_gray">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/booking" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews" />
    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>