<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_address" />

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:src="@drawable/close_button" />

    <RelativeLayout
        android:id="@+id/ll_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black">

        <TextView
            android:id="@+id/txt_title_select_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/selectdeliverylocation"
            android:textColor="@color/black"
            android:textSize="18dp" />


        <RelativeLayout
            android:id="@+id/ll_imput_adddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title_select_address"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imput_adddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/robins_egg_blue"
                android:hint="@string/YourLocation"
                android:textColorHint="@color/white"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:boxStrokeColor="@color/black">

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="text"
                    android:paddingRight="50dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/change"
                android:textColor="@color/change"
                android:textSize="12dp"
                android:visibility="gone" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_completed_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_imput_adddress"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/CompleteAddress"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imput_house_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title_select_address"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/Housenumber"
                android:textColorHint="@color/white"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:boxStrokeColor="@color/black">

                <EditText
                    android:id="@+id/edt_house_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imput_house_floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title_select_address"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/Floor"
                android:textColorHint="@color/white"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:boxStrokeColor="@color/black">

                <EditText
                    android:id="@+id/edt_house_floor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imput_house_tower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title_select_address"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/Tower_Block"
                android:textColorHint="@color/white"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:boxStrokeColor="@color/black">

                <EditText
                    android:id="@+id/edt_house_tower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/locationforlater"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_of_location_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:id="@+id/ll_save_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/ll_completed_address"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/ic_button_bg"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txt_address_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/saveadddress"
                    android:textColor="@color/white"
                    android:textSize="16dp" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ConfirmLocation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/ll_completed_address"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ic_button_bg"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/ConfirmLocation"
                android:textColor="@color/white"
                android:textSize="16dp" />


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>